Add timer functionality and typing input control for Typing Speed Test
- Implemented countdown timer with start prevention while active
- Enabled typing input only during active test, disabled after timeout
- Ensured timer stops exactly at 0 and resets state for next run
- Added clean and modular structure using separate timer.js and script.js

--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
     </div>
   </div>
 
-  <!-- No JavaScript by request. Your JS should hook into elements using the data-hook attributes and element IDs. -->
+  <script type="module" src="script.js"></script>
 </body>
 </html>
