--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <small class="text-muted">WPM</small>
             </div>
             <div class="stat text-center">
-              <div class="fw-bold h5" id="accuracy" data-hook="accuracy">100%</div>
+              <div class="fw-bold h5" id="accuracy" data-hook="accuracy">--%</div>
               <small class="text-muted">Accuracy</small>
             </div>
             <div class="stat text-center">
